# maturitni-projekt

./: Cargo.toml  Embed.toml  README.md  TODO.md
.cargo/: config.toml
src/: calc_err.pixil  calc_grave_err.pixil  command_mode.rs  custom_error.rs  decfix.rs  main.rs  stack.rs  textbox.rs
