[package]
edition = "2024"
name = "maturitni-projekt"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[dependencies]
cortex-m = { version = "0.7", features = ["inline-asm"] } # Bumps cortex-m's MSRV to 1.59, a non-issue
cortex-m-rt = "0.7"
embedded-hal = "1"
heapless = { version = "0.9", features = ["defmt"] }

defmt = "1"
defmt-rtt = "1"
panic-probe = { version = "1", features = ["print-defmt"] }

rp2040-hal = { version="0.11", features=["rt", "critical-section-impl", "defmt", "rom-v2-intrinsics"] }
rp2040-boot2 = "0.3"

ssd1306 = "0.10"
embedded-graphics = { version = "0.8", features = ["defmt"] }
tinybmp = "0.6"
# display-interface = { version = "0.5", features = ["defmt-03"], path = "D:\\Rust\\display-interface" }
display-interface = { version = "0.5", features = ["defmt-03"] }

[lints.clippy]
upper_case_acronyms = "allow"

# cargo build/run
[profile.dev]
codegen-units = 256 # Edited for faster compilation
debug = "full"
debug-assertions = true
incremental = true # Edited for faster compilation
opt-level = 0 # Edited
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1 # Kept at 1 to keep runtime at maximum speed
debug = "none" # Edited
debug-assertions = false
incremental = true # Edited
lto = 'fat'
opt-level = 3
overflow-checks = true

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

# cargo test
[profile.test]
codegen-units = 1
debug = "full"
debug-assertions = true
incremental = false
opt-level = 0 # Edited
overflow-checks = true

# cargo test --release
[profile.bench]
codegen-units = 1
debug = "none" # Edited
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
